# cpp_example_project

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  azure.yml  conanfile.py  conanfile.txt  conanfile_embedded.txt
.devcontainer/: .dockerignore  Dockerfile  devcontainer.json
.github/workflows/: build_cmake.yml
cmake/: BuildingConfig.cmake  Cache.cmake  CodeFormat.cmake  CompilerWarnings.cmake  Conan.cmake  Doxygen.cmake  GitInformation.cmake  InterproceduralOptimization.cmake  Options.cmake  PrecompiledHeader.cmake  Sanitizers.cmake  StandardProjectSettings.cmake  StaticAnalyzers.cmake  Utilities.cmake  VCEnvironment.cmake
cmake/arm-cortex-gnu/: ArmCortexGnuToolchain.cmake  ArmCortexM4Gnu.cmake
conan/: conanfile_default.txt.in  conanfile_embedded.txt.in
docker/: Dockerfile  README.md  build-ci-image.sh  build-dev-image.sh  cppdev-docker  docker-compose-ci.yml  docker-compose-dev.yml  docker-compose.yml
fuzz_test/: CMakeLists.txt  fuzz_tester.cpp
scripts/: run-clang-format.py  run-clang-tidy-diff.py  run-clang-tidy.py
src/: CMakeLists.txt  main.cpp
src/boost.beast/: CMakeLists.txt  data.h  error_handling.h  helper.h  listener.h  main.cpp  request.h  session.h
src/crow/: CMakeLists.txt  main.cpp
src/embedded/: CMakeLists.txt  linkerScript.ld  main.cpp
src/open62541/: CMakeLists.txt  client.cpp  server.cpp
src/open62541pp/: CMakeLists.txt  client.cpp  server.cpp
src/protobuf.cppzmq/: CMakeLists.txt
src/protobuf.cppzmq/client/: main.cpp
src/protobuf.cppzmq/common/include/: common.h
src/protobuf.cppzmq/proto/: event.proto
src/protobuf.cppzmq/server/: main.cpp
src/qt/: CMakeLists.txt
src/sml/: CMakeLists.txt  actions.h  events.h  logger.h  main.cpp  plantumlDump.h  states.h
templates/: version.hpp.in
test/: CMakeLists.txt
test/catch2/: CMakeLists.txt  catch_main.cpp  constexpr_tests.cpp  tests.cpp
test/gtest/: CMakeLists.txt  constexpr_tests.cpp  gtest_main.cpp  tests.cpp
